--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@ HW/HW2/__pycache__/preprocessing.cpython-38.pyc
 HW/HW2/model3_comp.py
 HW/HW2/__pycache__/utils.cpython-38.pyc
 HW/HW2/__pycache__/train_loop_model3.cpython-38.pyc
+HW/HW2/__pycache__/model3_comp.cpython-38.pyc
+HW/HW2/keren_rest.ipynb
