--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@ HW/HW2/data/debug.tagged
 HW/HW2/LSTM_model_stateDict_batchSize_32_hidden_32_lr_0.001.pt
 HW/HW2/LSTM_model_stateDict_batchSize_32_hidden_64_lr_0.001.pt
 HW/HW2/LSTM_model_stateDict_batchSize_32_hidden_16_lr_0.001.pt
+HW/HW2/LSTM_model_stateDict_batchSize_32_hidden_200_lr_0.001.pt
