--- a/.gitignore
+++ b/.gitignore
@@ -369,3 +369,4 @@ HW/HW2/plots/val_f1=nan_glove-twitter-200_hidden=256_CrossEntropy_              
 HW/HW2/plots/val_f1=nan_glove-twitter-200_hidden=256_CrossEntropy_                drop=0.2_w=[0.4, 0.6].png
 HW/HW2/plots/val_f1=nan_glove-twitter-200_hidden=256_CrossEntropy_                drop=0.4_w=[0.4, 0.6].png
 HW/HW2/LSTM_model_stateDict_hidden_128.pt
+HW/HW2/concated_ds_32.pkl
