--- a/.gitignore
+++ b/.gitignore
@@ -370,3 +370,7 @@ HW/HW2/plots/val_f1=nan_glove-twitter-200_hidden=256_CrossEntropy_              
 HW/HW2/plots/val_f1=nan_glove-twitter-200_hidden=256_CrossEntropy_                drop=0.4_w=[0.4, 0.6].png
 HW/HW2/LSTM_model_stateDict_hidden_128.pt
 HW/HW2/concated_ds_32.pkl
+HW/HW2/data/comp_206014482_316375872.tagged
+HW/HW2/__pycache__/predict_model3.cpython-38.pyc
+HW/HW2/plots/val_f1=0.699_concated2022-12-12_hidden=128_CrossEntropy_                drop=0.2_w=[0.1, 0.9].png
+HW/HW2/plots/val_f1=0.699_concated2022-12-12_hidden=128_CrossEntropy_                drop=0.2_w=[0.1, 0.9].png
