test write preds to file

--- a/.gitignore
+++ b/.gitignore
@@ -379,3 +379,4 @@ HW/HW3/__pycache__/preprocess.cpython-38.pyc
 HW/HW3/__pycache__/train_predict_plot.cpython-38.pyc
 HW/HW3/__pycache__/generate_comp_tagged.cpython-38.pyc
 HW/HW3/__pycache__/model.cpython-38.pyc
+HW/HW3/genreated_labels_train.labeled
